updated JRE version and udated methods in user